# vSongBook4pc

./: .gitignore  .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ItemSelect.cpp  ItemSelect.h  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  currentrelease  install_manifest.txt  qrc_CaCerts.cpp  qrc_flags.cpp  qrc_icons.cpp  qrc_style.cpp  ui_AboutDialog.h  ui_AddRecordDialog.h  ui_CipherDialog.h  ui_ColumnDisplayFormatDialog.h  ui_CondFormatManager.h  ui_EditDialog.h  ui_EditIndexDialog.h  ui_EditTableDialog.h  ui_ExportDataDialog.h  ui_ExportSqlDialog.h  ui_FileExtensionManager.h  ui_FindReplaceDialog.h  ui_ImportCsvDialog.h  ui_MainWindow.h  ui_PlotDock.h  ui_PreferencesDialog.h  ui_ProxyDialog.h  ui_RemoteDock.h  ui_RemotePushDialog.h  ui_SelectItemsPopup.h  ui_SqlExecutionArea.h  (+8 more)
Release/: qcustomplot.lib  qscintilla2.lib
builds/win32/: win32build.bat
distri/: sqlitebrowser.desktop  sqlitebrowser.desktop.appdata.xml  vSongBook.desktop  vSongBook.desktop.appdata.xml  vsongbook.desktop  vsongbook.desktop.appdata.xml
installer/macos/: .db4s_secure  build_sqlitebrowser_nightly.sh  build_vSongBook_nightly.sh  build_vsongbook_nightly.sh  nightly.json
installer/windows/: build.cmd  product.wxs  strings.wxl  translations.wxs  ui.wxs  variables.wxi
libs/json/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  json.pro
libs/qcustomplot-source/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  qcustomplot.vcxproj  qcustomplot.vcxproj.filters
libs/qhexedit/: INSTALL.vcxproj  INSTALL.vcxproj.filters  qhexedit.vcxproj  qhexedit.vcxproj.filters
project/: CMakeLists.txt
project/src/: MainWindow.cpp  src.pro  vSongEditor.ui  vSongOnline.cpp  vSongPreferences.h  vSongPresent.cpp  vSongTutorial.cpp  vSongTutorial.ui
publish/: Settings.ini  license.rtf  teapp.nsi  vSongBook.ini  vSongBook.nsi  vSongBook_x32.nsi  vSongBook_x32_loaded.nsi  vSongBook_x64.nsi  vSongBook_x64_loaded.nsi  vSongBook_x86.nsi  vSongs.ini  vsongbook_x32.nsi  vsongbook_x64.iss  vsongbook_x64.nsi
snap/: snapcraft.yaml
src/: AboutDialog.cpp  AboutDialog.ui  AddRecordDialog.cpp  AddRecordDialog.h  AddRecordDialog.ui  AppAbout.cpp  AppAbout.ui  AppEditor.cpp  AppEditor.h  AppEditor.ui  AppHome.cpp  AppHome.h  AppHome.ui  AppMain.cpp  AppMain.h  AppMain.ui  AppOnline.cpp  AppOnline.h  AppOnline.ui  AppPreferences.cpp  AppPreferences.h  AppPreferences.ui  AppPresent.cpp  AppPresent.h  AppPresent.ui  AppSongbooks.cpp  AppSongbooks.h  AppSongbooks.ui  AppSplash.cpp  AppSplash.ui  AppTutorial.cpp  AppTutorial.ui  Application.cpp  Application.h  AsBase.cpp  AsBase.h  AsCheckable.cpp  AsDelegate.cpp  AsDelegate.h  AsException.h  (+178 more)
src/certs/: CaCerts.qrc  ca-chain-development.crt  ca-chain-docker.crt  public.cert.pem
src/extensions/: extension-formats.c  extension-formats.def  extension-functions.def
src/icons/: icons.qrc  icons.qrc.depends
src/images/: images.qrc  images.qrc.depends
src/qdarkstyle/: LICENSE.md
src/sql/: ObjectIdentifier.cpp  ObjectIdentifier.h  Query.cpp  Query.h  sqlitetypes.cpp  sqlitetypes.h
src/tabs/: AppPreferences.cpp  AppPreferences.h  AppPreferences.ui  GhostWindow.cpp  GhostWindow.h  TabBar.cpp  TabBar.h  TabView.cpp  TabView.h  TabbedWindow.cpp  TabbedWindow.h  TabbedWindowPrivate.cpp  TabbedWindowPrivate.h
src/tests/: CMakeLists.txt  TestImport.cpp  TestRegex.cpp  TestRegex.h  TestRowCache.cpp  TestRowCache.h  testsqlobjects.cpp  testsqlobjects.h
src/tools/: create_windows_icon.sh
src/translations/: sqlb_ar_SA.ts  sqlb_cs.ts  sqlb_de.ts  sqlb_en_GB.ts  sqlb_es_ES.ts  sqlb_fa.ts  sqlb_fr.ts  sqlb_it.ts  sqlb_ko_KR.qph  sqlb_ko_KR.ts  sqlb_pl.ts  sqlb_pt_BR.ts  sqlb_ru.ts  sqlb_tr.ts  sqlb_uk_UA.ts  sqlb_zh.ts  sqlb_zh_TW.ts  translations.qrc  translations.qrc.depends
src/ui/: AppAbout.cpp  AppAbout.ui  AppEditor.cpp  AppEditor.h  AppEditor.ui  AppHome.cpp  AppHome.h  AppHome.ui  AppOnline.cpp  AppOnline.h  AppOnline.ui  AppPreferences.cpp  AppPreferences.h  AppPreferences.ui  AppPresent.cpp  AppPresent.h  AppPresent.ui  AppSongbooks.cpp  AppSongbooks.ui  AppTutorial.cpp  AppTutorial.ui
vSongBook/: AppSettings.cpp  AppSettings.h  AppSmata.h  AppSplash.cpp  AppSplash.h  FrmProject.cpp  FrmSongSearch.cpp  Makefile.in  descrip.mms  frmProject.h  frmSettings.h  frmSongSearch.h  makefile.bcc  makefile.gcc  makefile.unx  makefile.vc  vAppSplash.cpp  vAppSplash.h  vBooksLoad.cpp  vSongBook.bkl  vSongBook.cpp  vSongBook.fbp  vSongBook.h  vSongBook.rc  vSongBook.sql  vSongBook.vcxproj  vSongBook.vcxproj.filters  vSongBox.cpp  vSongCheck.cpp  vSongCheck.h  vSongHome.cpp  vSongHome.h  vSongPrefs.cpp  vSongPrefs.h  vSongView.cpp  vSongView.fbp  vSongView.h  vsbicon.xpm
vSongBook/Data/: Language.db-journal  Settings.db
vSongBook/notebook/: windowstack.cpp  windowstack.h  wxcrafter_bitmaps.cpp
vSongBook/res/: bigger.xpm  blackwhite_down.xpm  blackwhite_up.xpm  bold.xpm  books.xpm  edit.xpm  font.xpm  last.xpm  next.xpm  project.xpm  settings.xpm  smaller.xpm
vSongBook/sqlite/: SQLite.cpp  SQLite.h  sqlite3pp.h
vSongBook/ui/: AppSmata.h  vAppSplash.cpp  vBooksLoad.h  vSongBook.cpp  vSongBox.cpp  vSongCheck.cpp  vSongHome.cpp  vSongHome.h  vSongView.cpp  vSongView.h
vsongbook_autogen/: moc_predefs.h  mocs_compilation.cpp
vsongbook_autogen/UVLADIE3JM/: moc_AboutDialog.cpp  moc_AsDelegate.cpp  moc_CipherDialog.cpp  moc_CondFormatManager.cpp  moc_DbStructureModel.cpp  moc_ExportDataDialog.cpp  moc_ExportSqlDialog.cpp  moc_ExtendedTableWidget.cpp  moc_FileDialog.cpp  moc_FileExtensionManager.cpp  moc_FilterLineEdit.cpp  moc_FilterTableHeader.cpp  moc_ForeignKeyEditorDelegate.cpp  moc_ImportCsvDialog.cpp  moc_PlotDock.cpp  moc_ProxyDialog.cpp  moc_RemoteDatabase.cpp  moc_RemoteModel.cpp  moc_RemotePushDialog.cpp  moc_RowLoader.cpp  moc_RunSql.cpp  moc_SelectItemsPopup.cpp  moc_VacuumDialog.cpp  moc_sqlitedb.cpp  moc_sqlitetablemodel.cpp  moc_vSongBook.cpp  moc_vSongBooklist.cpp  moc_vSongEditor.cpp  moc_vSongHome.cpp  moc_vSongOnline.cpp  (+3 more)
(+131 files in other folders)
